tests/success/private_func/_.adept3

pragma => adept("3.0")

func main {
    sayMessage()
}

