tests/error/duplicate_type_names/main.adept3

pragma => adept("3.0")

struct Type1 ()
enum Type1 ()

func main {
}
